--- a/2-HTML/202-HTML-FORM/Form/index.html
+++ b/2-HTML/202-HTML-FORM/Form/index.html
@@ -37,10 +37,15 @@
            <input type="radio" 
            name="female" id="gender"> Female
            <br><br>
-           <label for="fName">Email :</label>
-            <input type="email" id="fName">
+           <label for="email">Email :</label>
+            <input type="email" id="email">
             <br>
             <br>
+            <label for="dob">Date of Birth:</label>
+            <input type="dob" id="dob" placeholder="dd/mm/yyyy">
+            <br>
+            <label for="address">Address:</label><br>
+            <textarea id="address" name="address" rows="3" cols="30">
             <input type="submit" value="Submit">
         </fieldset>
     </form>
