--- a/2-HTML/202-HTML-FORM/Form/index.html
+++ b/2-HTML/202-HTML-FORM/Form/index.html
@@ -45,7 +45,7 @@
             <input type="dob" id="dob" placeholder="dd/mm/yyyy">
             <br>
             <label for="address">Address:</label><br>
-            <textarea id="address" name="address" rows="3" cols="30">
+            <textarea id="address" name="address" rows="3" cols="30"></textarea>
             <br><br>
             <input type="submit" value="Submit">
         </fieldset>
