--- a/2-HTML/204-HTML-TRIBUTE-PAGE/TributePage/index.html
+++ b/2-HTML/204-HTML-TRIBUTE-PAGE/TributePage/index.html
@@ -49,7 +49,7 @@
             <h2 style="text-align: center;">Instagram <img class="insta" src="./insta icon.jpg"/></h2>
             <iframe src="https://www.instagram.com/virat.kohli/" scrolling="no" style="height:400px;width:500px; "or title="Iframe Example"></iframe>
             <h2 style="text-align: center;">Google Map </h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!4v1641579940214!6m8!1m7!1sMbtp3-RWwYeQbFjS_lM0zQ!2m2!1d45.39699417317996!2d-75.68136068949613!3f258.24336448934645!4f-16.275050570181165!5f0.7820865974627469" style="height:400px;width:500px;" title="Iframe Example"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3549.400402075936!2d78.03995351448931!3d27.175149555285937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1666547853307!5m2!1sen!2sin" style="height:400px;width:500px;" title="Iframe Example"></iframe>
         </div>
     </div>
 </body>
