--- a/3-CSS/301-CSS-BLOG-WEBSITE/CSS-301-01/index.html
+++ b/3-CSS/301-CSS-BLOG-WEBSITE/CSS-301-01/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    start your code here
-  </body>
+    <title>Typography</title>
+</head>
+<body>
+    <h2 style="text-align: center;">Typography in Design Systems</h2>
+    <div>
+        <div class="second">Aa</div>
+    </div>
+    <div class="color-container">
+        <div class="first">Aa</div>
+        <div class="third">Aa</div>
+    </div>
+    <br>
+    <div class="paragraph" style="width:40vw; padding:0 50px">
+        
+        <p>Everyday digital interfaces include a rich variety of images, visualizations, and other poctures. However, more than anything else, they are made of words. Oh so many words. As we equip teams to design and code usable, consistent, beautiful interfaces using systems, it's essential that words depend on a strong foundation of typography.<br>
+        <br>I'll admit, I am not a typography expert. I lack a graphic design degree, i', nevver the peson choosing a font, scaling type, or finessing letter spsacing. As a result, i've always been reluctant to write about typography.<br>
+        <br>on the other hand, I am a pattern hunter. Over the years, I've contributed to many design systems that set a foundation and apply it to an emerging library of interface components. This article summarizes those patterns.<br>
+        <br>Typography starts by setting a foundation of font families and weights along with fallbacks. It then explores how to build hierarchy using size, color, additional details like line-height, and layering responsiveness. Those models are then applied to components in a system’s library (like Article and Header) as well as custom components made by other teams.</p>
+    
+        <iframe width="450" height="315" src="https://www.youtube.com/embed/O-XrRQf7BPM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <br>
+        <p>Ekstra bilgi, bu video, Photoshop ve diğer grafik tasarım programları için video dersler hazırlayan Lynda tarafından Photoshop’un 25. Yılını kutlamak amacıyla hazırlanmış.</p>
+        <br>
+        <br>
+        <br>
+        <p>Originally published at www.ferdicildiz.net on July 18, 2015.</p>
+    </div>
+</body>
 </html>
