--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MammothNews</title>
   </head>
   <body>
-    start your code here
+    <div class="main-container">
+      <h2 style="color:white">Subscribe to MammothNews</h2>
+      <br>
+      <div class="inputs">
+        <input type="text" placeholder="Name*" class="input"/>
+        <br><br>
+        <input type="text" placeholder="Surname*" class="input"/>
+        <br><br>
+        <input type="text" placeholder="Email*" class="input"/>
+        <br><br>
+        <input placeholder="Birthday" class="input" type="text" onfocus="(this.type='date')"  id="date"> 
+      </div>
+      <div class="terms-conditions" style="display: flex; justify-content: space-evenly;">
+        <input type="checkbox" class="check" />
+        <p style="color:white; padding-left: 25px; font-family:Arial;" ><i>I have read and accept the terms and conditions.<u>View our Terms and Conditions.</u></i></p>
+      </div>
+      <div class="button">
+        <button type="submit" class="submit">Submit</button>
+      </div>
+    </div>
   </body>
 </html>
