--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/index.html
@@ -18,7 +18,7 @@
         <br><br>
         <input type="text" placeholder="Email*" class="input"/>
         <br><br>
-        <input placeholder="Birthday" class="input" type="text" onfocus="(this.type='date')"  id="date"> 
+        <input placeholder="Birthday" class="input" type="text"> 
       </div>
       <div class="terms-conditions" style="display: flex; justify-content: space-evenly;">
         <input type="checkbox" class="check" />
