--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    start your code here
+    <div class="main-container" style="padding:0 20px">
+      <img src="serum.jpeg" alt="serum"/>
+      <p style="font-family:Arial">Whiskers Hair Serum</p>
+      <p style="color:grey;font-family:Arial;">&#x20B9 550.00</p>
+    </div>
   </body>
 </html>
