--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/index.html
@@ -36,7 +36,7 @@
                 <tr>
                     <td><button>.</button></td>
                     <td><button>0</button></td>
-                    <td><button style="background-color: #05D6A0;">=</button></td>
+                    <td><button class="equal"style="background-color: #05D6A0;">=</button></td>
                     <td><button class="op">-</button></td>
                 </tr>
             </table>
