--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cars</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="main-container">
+        <div class="firstbox">
+            <div class="icon">
+                <img src="https://www.flaticon.com/free-icons/sedan" />
+            </div>
+            <h1>SEDANS</h1>
+            <p>Choose a sedon for its affordability and excellent fuel economy. Ideal for curising in the city or on your next road trip</p>
+            <button style="color: orange;">Learn More</button>
+        </div>
+        <div class="secondbox">
+            <div class="icon" style="background-color: rgb(95, 27, 158)">
+                <img src="https://www.flaticon.com/free-icons/suv" />
+            <h1>SUVS</h1>
+            <p>Take an SUV for its spacious interior power and versatility. Perfect for your next family vacation and off-road adventures.</p>
+            <button style="color: blueviolet;">Learn More</button>
+        </div>
+        <div class="thirdbox">
+            <div class="icon" style="background-color: rgb(83, 81, 81);">
+                <img src="https://www.flaticon.com/free-icons/supercar" style="height:50px; margin-top:-13px;">
+            </div>
+            <h1>LUXURY</h1>
+            <p>Cruise in the best car brands without the  bloated prices. Enjoy the enhanced comfort of a luxury  rental and arrive in style.</p>
+            <button style="color: gray;">Learn More</button>
+        </div>
+    </div>
 </body>
 </html>
