--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
@@ -11,7 +11,7 @@
     <div class="main-container">
         <div class="firstbox">
             <div class="icon">
-                <img src="./sedans icon.jpg" />
+                <img src="images/sedan.png" />
             </div>
             <h1>SEDANS</h1>
             <p>Choose a sedon for its affordability and excellent fuel economy. Ideal for curising in the city or on your next road trip</p>
@@ -19,7 +19,7 @@
         </div>
         <div class="secondbox">
             <div class="icon" style="background-color: rgb(95, 27, 158)">
-                <img src="./Suv icon.png" />
+                <img src="images/suv.png" />
             </div>
             <h1>SUVS</h1>
             <p>Take an SUV for its spacious interior power and versatility. Perfect for your next family vacation and off-road adventures.</p>
@@ -27,7 +27,7 @@
         </div>
         <div class="thirdbox">
             <div class="icon" style="background-color: rgb(83, 81, 81);">
-                <img src="./luxury.png" / style="height:50px; margin-top:-13px;">
+                <img src="images/supercar.png" / style="height:50px; margin-top:-13px;">
             </div>
             <h1>LUXURY</h1>
             <p>Cruise in the best car brands without the  bloated prices. Enjoy the enhanced comfort of a luxury  rental and arrive in style.</p>
