--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
@@ -15,7 +15,7 @@
             </div>
             <h1>SEDANS</h1>
             <p>Choose a sedon for its affordability and excellent fuel economy. Ideal for curising in the city or on your next road trip</p>
-            <button style="color: orange;">Learn More</button>
+            <button>Learn More</button>
         </div>
         <div class="secondbox">
             <div class="icon" style="background-color: rgb(95, 27, 158)">
@@ -23,7 +23,7 @@
             </div>
             <h1>SUVS</h1>
             <p>Take an SUV for its spacious interior power and versatility. Perfect for your next family vacation and off-road adventures.</p>
-            <button style="color: blueviolet;">Learn More</button>
+            <button>Learn More</button>
         </div>
         <div class="thirdbox">
             <div class="icon" style="background-color: rgb(83, 81, 81);">
@@ -31,7 +31,7 @@
             </div>
             <h1>LUXURY</h1>
             <p>Cruise in the best car brands without the  bloated prices. Enjoy the enhanced comfort of a luxury  rental and arrive in style.</p>
-            <button style="color: gray;">Learn More</button>
+            <button>Learn More</button>
         </div>
     </div>
 </body>
