--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="thirdbox">
             <div class="icon" style="background-color: rgb(83, 81, 81);">
-                <img src="images/" / style="height:50px; margin-top:-13px;">
+                <img src="images/supercar.png" / style="height:50px; margin-top:-13px;">
             </div>
             <h1>LUXURY</h1>
             <p>Cruise in the best car brands without the  bloated prices. Enjoy the enhanced comfort of a luxury  rental and arrive in style.</p>
