--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/index.html
@@ -8,29 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="firstbox">
-            <div class="icon">
+    <div class="container">
+        <div class="box-one">
+            <div class="icon" style="background-color: rgb(182,109,30)">
                 <img src="images/sedan.png" />
             </div>
             <h1>SEDANS</h1>
-            <p>Choose a sedon for its affordability and excellent fuel economy. Ideal for curising in the city or on your next road trip</p>
+            <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for curising in the city or on your next road trip.</p>
             <button style="color: #E38826;">Learn More</button>
         </div>
-        <div class="secondbox">
-            <div class="icon" style="background-color: rgb(95, 27, 158)">
+        <div class="box-two">
+            <div class="icon" style="background-color: rgb(0, 84, 90)">
                 <img src="images/suv.png" />
             </div>
             <h1>SUVS</h1>
-            <p>Take an SUV for its spacious interior power and versatility. Perfect for your next family vacation and off-road adventures.</p>
+            <p>Take an SUV for its spacious interior, power and versatility. Perfect for your next family vacation and off-road adventures.</p>
             <button style="color: #006970;">Learn More</button>
         </div>
-        <div class="thirdbox">
-            <div class="icon" style="background-color: rgb(83, 81, 81);">
-                <img src="images/supercar.png" / style="height:50px; margin-top:-13px;">
+        <div class="box-three">
+            <div class="icon" style="background-color: rgb(0, 53, 52);">
+                <img src="images/supercar.png">
             </div>
             <h1>LUXURY</h1>
-            <p>Cruise in the best car brands without the  bloated prices. Enjoy the enhanced comfort of a luxury  rental and arrive in style.</p>
+            <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
             <button style="color: #004241;">Learn More</button>
         </div>
     </div>
