--- a/3-CSS/305-CSS-Flexbox/CSS-305-04/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-04/index.html
@@ -4,9 +4,197 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="https://static-assets-web.flixcart.com/www/promos/new/20150528-140547-favicon-retina.ico">
+    <title>Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books &amp; More. Best Offers!</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/fontawesome.min.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <!-- navbar start -->
+    <div class="container">
+        <div class="nav">
+            <div class="bar">
+                <div class="blank"></div>
+                <div class="header">
+                    <div class="link">
+                        <div class="logo">
+                            <a href="/"><img width="75" src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/flipkart-plus_8d85f4.png" alt="Flipkart" title="Flipkart" class="flip"></a>
+                            <a class="explore" href="/">Explore <span class="plus">Plus</span>
+                                <img width="10" src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/plus_aef861.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="search-section">
+                        <form class="search-form header-form-search" action="#" method="GET">
+                            <div class="col-12-12 search-div">
+                                <div class="search-bar">
+                                    <input class="search-input" type="text" name="s" placeholder="Search for products, brands and more" value="">
+                                </div>
+                                <button class="search-button" type="submit">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="nav-link nav-head">
+                        <div class="link-head">
+                            <div class="product-name-section name-head">
+                                <a class="login-button" href="#">Login</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav-link">
+                        <a href="#" class="seller"><span>Become a Seller</span></a>
+                    </div>
+                    <div class="nav-link">
+                        <div class="link-head">
+                            <div class="product-name-section name-head">
+                                <div>
+                                    <div class="more"> More </div>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="nav-link">
+                        <div class="product-name-section">
+                            <div class="cart">
+                                <a class="cart-link" href="#">
+                                    <i class="fa-solid fa-cart-shopping"></i>
+                                    <span>Cart</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- navbar end -->
+        <!-- product section start -->
+        <div class="product-container section-2">
+            <div class="nav2">
+                <div class="prod-nav">
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Top Offers" src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100">
+                                </div>
+                            </div>
+                            <span class="product-name">Top Offers</span>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Grocery" src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100">
+                                </div>
+                            </div>
+                            <span class="product-name">Grocery</span>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Mobiles" src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100">
+                                </div>
+                            </div>
+                            <span class="product-name">Mobiles</span>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Fashion" src="https://rukminim1.flixcart.com/flap/128/128/image/c12afc017e6f24cb.png?q=100">
+                                </div>
+                            </div>
+                            <div class="product-name-section">
+                                <div>
+                                    <span class="product-name">Fashion<i class="fa-solid fa-chevron-down"></i></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Electronics" src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100">
+                                </div>
+                            </div>
+                            <div class="product-name-section">
+                                <div>
+                                    <span class="product-name">Electronics<i class="fa-solid fa-chevron-down"></i></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Home" src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100">
+                                </div>
+                            </div>
+                            <div class="product-name-section">
+                                <div>
+                                    <span class="product-name">Home<i class="fa-solid fa-chevron-down"></i></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Appliances" src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100">
+                                </div>
+                            </div>
+                            <span class="product-name">Appliances</span>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Travel" src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100">
+                                </div>
+                            </div>
+                            <span class="product-name">Travel</span>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="Beauty, Toys &amp; More" src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100">
+                                </div>
+                            </div>
+                            <div class="product-name-section">
+                                <div>
+                                    <span class="product-name">Beauty, Toys &amp; More<i class="fa-solid fa-chevron-down"></i></span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="product-nav">
+                        <a href="#">
+                            <div class="prod">
+                                <div class="product" style="height: 64px; width: 64px;">
+                                    <img class="product-img" alt="2-Wheelers" src="https://rukminim1.flixcart.com/fk-p-flap/128/128/image/05d708653beff580.png?q=100">
+                                </div>
+                            </div>
+                            <span class="product-name">2-Wheelers</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- product section end -->
+    </div>
 </body>
 </html>
