--- a/3-CSS/305-CSS-Flexbox/CSS-305-06/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-06/index.html
@@ -5,8 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkedin</title>
+    <link rel="fav icon" href="https://static-exp1.licdn.com/aero-v1/sc/h/al2o9zrvru7aqj8e1x2rzsrca">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <img src="images/Linkedin-Logo.png" width="135" height="75">
+            </div>
+            <div class="options">
+                <div class="option">
+                    <img class="icon" src="images/discover.png">
+                    <p class="iconnames">Discover</p>
+                </div>
+                <div class="option">
+                    <img class="icon" src="images/people.png">
+                    <p class="iconnames">People</p>
+                </div>
+                <div class="option">
+                    <img class="icon" src="images/learning.png">
+                    <p class="iconnames">Learning</p>
+                </div>
+                <div class="option">
+                    <img class="icon" src="images/jobs.png" style="margin-top:2px;">
+                    <p class="iconnames" style="margin:1px 0 0 8px">Jobs</p>
+                </div>
+                <div class="up-down-divider"></div>
+                <p class="join">Join now</p>
+                <button class="signin">Sign in</button>
+            </div>
+        </div>
+        <div class="body-container">
+            <div>
+               <h1>Join the biggest <br>professional community</h1>
+               <input type="email" class="login" placeholder="   Email"/>
+               <br><br>
+               <input type="password" class="login" placeholder="   Password (8+ characters)"/>
+               <p class="declaration">By clicking Agree & Join, you agree to the LinkedIn <a href="#">User <br> Agreement, Privacy Policy</a> and <a href="#">Cookie Policy.</a></p> 
+               <button class="agree-join">Agree & Join</button>
+               <div class="left-right-divider my-2">
+                <span class="text-color-text-low-emphasis px-2">or</span>
+              </div>
+               <p style="margin-left: 110px;">Already on Linkedin? <a class="already" href="#">Sign in</a></p>
+            </div>
+            <div>
+                <img class="image" src="images/image.png" alt="group of people" />
+            </div>
+        </div>
+    </div>
 </body>
 </html>
