--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Voot</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
   <body>
-    start your code here
+    <div class="container">
+      <p style="color:white; font-weight:600;">My Voot</p>
+      <p>Premium</p>
+      <p>Sports</p>
+      <p>Shows</p>
+      <p>Movies</p>
+      <p>Kids</p>
+      <p>Channels</p>
+      <div class="icons">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-regular fa-circle-user"></i>
+     </div>
+   </div>
   </body>
 </html>
