--- a/2-HTML/204-HTML-TRIBUTE-PAGE/TributePage/index.html
+++ b/2-HTML/204-HTML-TRIBUTE-PAGE/TributePage/index.html
@@ -56,7 +56,7 @@
             <h2 style="text-align: center;">Google Map </h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3549.400402075936!2d78.03995351448931!3d27.175149555285937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747121d702ff6d%3A0xdd2ae4803f767dde!2sTaj%20Mahal!5e0!3m2!1sen!2sin!4v1666547853307!5m2!1sen!2sin" style="height:400px;width:420px;margin-left: 35%;" title="Iframe Example"></iframe>
             <h2 style="text-align: center;">Favourite songs </h2>
-            <iframe src="https://twitter.com/imVkohli?ref_src=twsrc%5Etfw" scrolling="no" style="height:100px;width:1366px; "or title="Iframe Example"></iframe>
+            <iframe src="Player.png" scrolling="no" style="height:78px;width:1348px; "or title="Iframe Example"></iframe>
         </div>
     </div>
 </body>
