--- a/3-CSS/305-CSS-Flexbox/CSS-305-05/index.html
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-05/index.html
@@ -5,8 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Profile</title>
-</head>
-<body>
-    <!-- start your code here -->
-</body>
+    <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <div class="main">
+        <section class="glass">
+          <div class="dashboard">
+            <div class="user">
+              <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/avatar.png" alt="" />
+              <h3>Simo Edwin</h3>
+              <p>Pro Member</p>
+            </div>
+            <div class="links">
+              <div class="link">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/twitch.png" width="30px" height="30px" alt="" />
+                <h2>Streams</h2>
+              </div>
+              <div class="link">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/steam.png" width="30px" height="30px" alt="" />
+                <h2>Games</h2>
+              </div>
+              <div class="link">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/upcoming.png" width="30px" height="30px" alt="" />
+                <h2>New</h2>
+              </div>
+              <div class="link">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/library.png" width="30px" height="30px" alt="" />
+                <h2>Library</h2>
+              </div>
+            </div>
+            <div class="pro">
+              <h2>Join pro for free games.</h2>
+              <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/controller.png" alt="" />
+            </div>
+          </div>
+          <div class="games">
+            <div class="status">
+              <h1>Active Games</h1>
+              <input type="text" />
+            </div>
+            <div class="cards">
+              <div class="card">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/assassins.png" width="80px" height="80px" alt="" />
+                <div class="card-info">
+                  <h2>Assassins Creed Valhalla</h2>
+                  <p>PS5 Version</p>
+                  <div class="progress"></div>
+                </div>
+                <h2 class="percentage">60%</h2>
+              </div>
+              <div class="card">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/assassins.png" width="80px" height="80px" alt="" />
+                <div class="card-info">
+                  <h2>Assassins Creed Valhalla</h2>
+                  <p>PS5 Version</p>
+                  <div class="progress"></div>
+                </div>
+                <h2 class="percentage">60%</h2>
+              </div>
+              <div class="card">
+                <img src="https://raw.githubusercontent.com/developedbyed/glass-website/master/images/assassins.png" width="80px" height="80px" alt="" />
+                <div class="card-info">
+                  <h2>Assassins Creed Valhalla</h2>
+                  <p>PS5 Version</p>
+                  <div class="progress"></div>
+                </div>
+                <h2 class="percentage">60%</h2>
+              </div>
+            </div>
+          </div>
+        </section>
+    </div>
+    <div class="circle1"></div>
+    </body>
 </html>
+  
