--- a/3-CSS/306-CSS-Grid/CSS-306-03/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercer Tavern</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="container">
+        <div class="nav">
+            <img src="image/navbar.png" alt="navbar" class="navbar">
+        </div> 
+        <div class="box-1">
+            <div class="sqbox-1">
+                <div class="sqboxtop">
+                    <div class="sqboxtopA">
+                        <img src="image/sole.png" alt="sole" class="sole">
+                    </div>
+                    <div class="sqboxtopB">
+                        <img src="image/tuesday.png" alt="tuesday" class="tuesday">
+                    </div>
+                </div>
+                <div class="sqboxbot">
+                    <div class="sqboxbotA">
+                        <img src="image/twitter.png" alt="twitter" class="twitter">
+                    </div>
+                    <div class="sqboxbotB">
+                        <img src="image/open.png" alt="open" class="open">
+                    </div>
+                </div>
+            </div>
+            <div class="sqbox-2">
+                <div class="sqboxl">
+                    <img src="image/upcoming.png" alt="upcoming" class="upcoming">
+                </div>
+                <div class="sqboxr">
+                    <img src="image/story.png" alt="story" class="story">
+                </div>
+            </div>
+        </div>
+        <div class="box-2">
+            <div class="imgboxA">
+                <img src="image/gallery.png" alt="gallery" class="gallery">
+            </div>
+            <div class="imgboxB">
+                <img src="image/facts.png" alt="facts" class="facts">
+            </div>
+            <div class="imgboxC">
+                <img src="image/foods.png" alt="foods" class="foods">
+            </div>
+        </div>
+     <div class="footer">
+        <img src="image/footer.png" alt="footer" class="footer">
+     </div>
+    </div>
 </body>
 </html>
