--- a/3-CSS/306-CSS-Grid/CSS-306-01/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="container">
+        <div class="col1">
+            <div class="smallbox" style="border-top: none;border-left: none;"></div>
+            <div class="smallbox"style="border-left: none;"></div>
+            <div class="smallbox"style="border-left: none;"></div>
+            <div class="smallbox" style="border-bottom: none;border-left: none;"></div>
+        </div>
+        <div class="col2">
+            <div class="biggestbox1" style="border-top: none;"></div>
+            <div class="biggestbox2" style="border-bottom: none;">
+                <div class="bigleft">
+                    <div class="bigleft1"></div>
+                    <div class="bigleft2"></div>
+                </div>
+                <div class="bigright"></div>
+            </div>
+        </div>
+        <div class="col3">
+            <div class="mediumtop">
+                <div class="medium1" style="border-top: none;border-right: none;"></div>
+                <div class="medium2" style="border-right: none;"></div>
+            </div>
+            <div class="mediumbottom">
+                <div class="medbottom1">
+                    <div class="medbox"></div>
+                    <div class="medbox"style="border-right: none;"></div>
+                </div>
+                <div class="medbottom2">
+                    <div class="medbox" style="border-bottom: none;"></div>
+                    <div class="medbox"style="border-bottom: none;border-right: none;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
