--- a/3-CSS/306-CSS-Grid/CSS-306-01/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/index.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gradient Color Box</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <div class="col1">
-            <div class="smallbox" style="border-top: none;border-left: none;"></div>
-            <div class="smallbox"style="border-left: none;"></div>
-            <div class="smallbox"style="border-left: none;"></div>
-            <div class="smallbox" style="border-bottom: none;border-left: none;"></div>
+        <div class="col-1">
+            <div class="box-S" style="border-top: none;border-left: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+            <div class="box-S" style="border-left: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+            <div class="box-S" style="border-left: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+            <div class="box-S" style="border-bottom: none;border-left: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
         </div>
-        <div class="col2">
-            <div class="biggestbox1" style="border-top: none;"></div>
-            <div class="biggestbox2" style="border-bottom: none;">
-                <div class="bigleft">
-                    <div class="bigleft1"></div>
-                    <div class="bigleft2"></div>
+        <div class="col-2">
+            <div class="box-L1" style="border-top: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+            <div class="box-L2" style="border-bottom: none;">
+                <div class="box-Left">
+                    <div class="box-Left1"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+                    <div class="box-Left2"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
                 </div>
-                <div class="bigright"></div>
+                <div class="box-R"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
             </div>
         </div>
-        <div class="col3">
-            <div class="mediumtop">
-                <div class="medium1" style="border-top: none;border-right: none;"></div>
-                <div class="medium2" style="border-right: none;"></div>
+        <div class="col-3">
+            <div class="up-M">
+                <div class="med-R1" style="border-top: none;border-right: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+                <div class="med-R2" style="border-right: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
             </div>
-            <div class="mediumbottom">
-                <div class="medbottom1">
-                    <div class="medbox"></div>
-                    <div class="medbox"style="border-right: none;"></div>
+            <div class="down-M">
+                <div class="bot-M1">
+                    <div class="box-M"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+                    <div class="box-M" style="border-right: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
                 </div>
-                <div class="medbottom2">
-                    <div class="medbox" style="border-bottom: none;"></div>
-                    <div class="medbox"style="border-bottom: none;border-right: none;"></div>
+                <div class="bot-M2">
+                    <div class="box-M" style="border-bottom: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
+                    <div class="box-M" style="border-bottom: none;border-right: none;"><i class="fa-solid fa-diamond"></i><div class="bar"></div></div>
                 </div>
             </div>
         </div>
