--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hover Dropdown</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- start your code here -->
+    <div class="container">
+      <div class="dropdown">
+        <h1>1.</h1>
+          <button class="dropbtn">Hover Me</button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
