--- a/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
+++ b/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-01/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <main>
+      <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo" />
+      <div class="search">
+        <div class="search__input">
+          <span class="material-icons"> search </span>
+          <input type="text" />
+          <img class="mic" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_microphone_logo.png" alt="" />
+        </div>
+        <div class="search__buttons">
+          <button>Google Search</button>
+          <button>I'm Feeling Lucky</button>
+        </div>
+        <div class="language">
+          <p style="font-size: medium"> Google offered in: </p>
+          <p> 
+            <a href=""> हिन्दी </a> 
+            <a href="">বাংলা</a> 
+            <a href="">తెలుగు</a> 
+            <a href="">मराठी</a> 
+            <a href="">தமிழ்</a>
+            <a href="">ગુજરાતી</a> 
+            <a href="">ಕನ್ನಡ</a> 
+            <a href="">മലയാളം</a> 
+            <a href="">ਪੰਜਾਬੀ</a> 
+          </p>
+        </div>
+      </div>
+    </main>
+    <script>
+      let button1 = document.getElementsByTagName('button')[0];
+      button1.innerText = "Geekster Search";
+    </script>
   </body>
 </html>
