--- a/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-02/index.html
+++ b/4-Advance-JS/402-DOM-Manipulation/AdvanceJS-402-02/index.html
@@ -7,7 +7,7 @@
     <title>Click button</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  ><body>
+  <body>
     <main>
       <h1> Geekster </h1>
       <p> Click on the button to add image element </p>
