--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-01/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-01/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Keyboard</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <main>
+      <div class="container">
+        <div class="text">
+          <p> Press any keyboard key </p>
+        </div>  
+      </div>
+    </main>
+    <script>
+      let button = document.getElementsByClassName('text')[0];
+      let container = document.getElementsByClassName('container')[0];
+      document.addEventListener('keyup', (event) => {
+        button.remove();
+        let text = document.createElement('div');
+        text.setAttribute('class', 'text');
+        container.appendChild(text);
+        text.innerHTML = `<p>You pressed <span>${event.key}</span> </p>`
+        let box = document.createElement('div');
+        box.setAttribute('class', 'box');
+        container.appendChild(box);
+        box.innerHTML = `${event.keyCode}`
+        document.addEventListener('keydown', () => {
+          text.remove();
+          box.remove();
+        })
+      })
+    </script>
   </body>
 </html>
