--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Drum Roll</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Start your code here
+    <h1 id="title">Drum 🥁 Kit</h1>
+    <div class="drums">
+      <button class="w drum"> w </button>
+      <button class="a drum"> a </button>
+      <button class="s drum"> s </button>
+      <button class="d drum"> d </button>
+      <button class="j drum"> j </button>
+      <button class="k drum"> k </button>
+      <button class="l drum"> l </button>
+    </div>
+    <div>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="w"></audio>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="a"></audio>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="s"></audio>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="d"></audio>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="j"></audio>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="k"></audio>
+      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="l"></audio>
+
+    </div>
+    <script>
+      let button = document.getElementsByTagName('button');
+      for (let i = 0; i < button.length; i++) {
+        button[i].addEventListener('click', () => {
+          sound(button[i].innerText)
+          animation(button[i].innerText);
+        });
+      }
+      document.addEventListener('keypress', (event) => {
+        sound(event.key)
+        animation(event.key)
+      });
+      function sound(key) {
+        switch (key) {
+          case 'w':
+            var w = document.getElementById('w');
+            w.play();
+            break;
+          case 'a':
+            var a = document.getElementById('a');
+            a.play();
+          case 's':
+            var s = document.getElementById('s');
+            s.play();
+            break;
+          case 'd':
+            var d = document.getElementById('d');
+            d.play();
+            break;
+          case 'j':
+            var j = document.getElementById('j');
+            j.play();
+            break;
+          case 'k':
+            var k = document.getElementById('k');
+            k.play();
+            break;
+          case 'l':
+            var l = document.getElementById('l');
+            l.play();
+            break;
+        }
+      }
+      function animation(key) {
+        var currentkey = document.querySelector("." + key)
+        currentkey.classList.add("animation");
+        setTimeout(function () {
+          currentkey.classList.remove("animation");
+        }, 100);
+      }
+    </script>
   </body>
 </html>
