--- a/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
+++ b/4-Advance-JS/403-event-listeners/AdvanceJS-403-02/index.html
@@ -19,13 +19,13 @@
       <button class="l drum"> l </button>
     </div>
     <div>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="w"></audio>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="a"></audio>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="s"></audio>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="d"></audio>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="j"></audio>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="k"></audio>
-      <audio src="sounds/4-Advance-JS_403-event-listeners_AdvanceJS-403-02_sounds_sounds_crash.mp3" id="l"></audio>
+      <audio src="sounds/sounds_crash.mp3" id="w"></audio>
+      <audio src="sounds/sounds_tom-2.mp3" id="a"></audio>
+      <audio src="sounds/sounds_tom-3.mp3" id="s"></audio>
+      <audio src="sounds/sounds_tom-1.mp3" id="d"></audio>
+      <audio src="sounds/sounds_snare.mp3" id="j"></audio>
+      <audio src="sounds/sounds_tom-4.mp3" id="k"></audio>
+      <audio src="sounds/sounds_kick-bass.mp3" id="l"></audio>
 
     </div>
     <script>
